force-app/main/default/objects/Work_Package__c/Work_Package__c.object-meta.xml
<CustomObject>
    <description>Deliverable-level work package under a WBS item. Used for task assignment and daily progress logging.</description>
    <label>Work Package</label>
    <nameField>
        <displayFormat>WP-{0000}</displayFormat>
        <label>Work Package Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>