force-app/main/default/objects/Work_Package__c/fields/Planned_Start__c.field-meta.xml
<CustomField>
    <fullName>Planned_Start__c</fullName>
    <label>Planned Start</label>
    <type>Date</type>
</CustomField>