force-app/main/default/objects/Work_Package__c/fields/WBS_Item__c.field-meta.xml
<CustomField>
    <fullName>WBS_Item__c</fullName>
    <label>WBS Item</label>
    <referenceTo>WBS_Item__c</referenceTo>
    <relationshipLabel>Work Packages</relationshipLabel>
    <relationshipName>Work_Packages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>