force-app/main/default/objects/Work_Package__c/fields/WP_Code__c.field-meta.xml
<CustomField>
    <fullName>WP_Code__c</fullName>
    <description>Hierarchical code derived from parent WBS item code and the WP auto-number, e.g. 1.2.3</description>
    <formula>IF(
    ISBLANK(WBS_Item__r.WBS_Code__c),
    Name,
    WBS_Item__r.WBS_Code__c &amp; "." &amp; TEXT(VALUE(MID(Name, 4, LEN(Name) - 3)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WP Code</label>
    <type>Text</type>
</CustomField>